Fixed the header z-index

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,5 +7,5 @@ mat-sidenav {
 }
 
 .invisibleHeader {
-  visibility: hidden;
+  z-index: -1 !important;
 }
